# rpi-cobweb

./: Cargo.toml  README.md
src/: main.rs
static/css/: style.css
static/js/: ajax.js
templates/: front.html.hbs  layout.html.hbs
